--- a/indedx.html
+++ b/indedx.html
@@ -1,7 +1,7 @@
 
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="StyleTest.css"
+    <link rel="stylesheet" type="text/css" href="StyleTest.css"/>
   </head>
   <body>
     <p>
