--- a/math-quiz.html
+++ b/math-quiz.html
@@ -6,7 +6,7 @@
   </title>
   
   <link rel"stylesheet" type="text/css" href="mathQuizStyle.css"/>
-  <script src="mathScript.js>
+  <script src="mathScript.js">
   </script>
   
 </head>
