--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <p id='Hello'>
       Hello, World!
     </p>
+    <break>
+    <p>
+      <a href="math-quiz.html"> Click here!</a>
+    </p>
   </body>
 </html>
